[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scenes/Enemies/Minotaur.gd" type="Script" id=1]
[ext_resource path="res://Assets/Enemies/Minotaur/Minotaur21.png" type="Texture" id=2]
[ext_resource path="res://Assets/Enemies/Minotaur/Minotaur4.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Overlap/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Overlap/Hitbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Enemies/Minotaur/Minotaur1.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Overlap/Stats.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Overlap/PlayerDetectionZone.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/Enemies/Minotaur/Minotaur22.png" type="Texture" id=9]
[ext_resource path="res://Assets/Songs/Enemies/Minotaur/03-MinotaurHitSound-consolidated.wav" type="AudioStream" id=10]
[ext_resource path="res://Assets/Songs/Enemies/Minotaur/02-MinoDeathSound-consolidated.wav" type="AudioStream" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14.7251, 22.2342 )

[sub_resource type="Animation" id=2]
resource_name = "Attack"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite4:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite4:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=3]
resource_name = "Idle"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1, 0 ]
}

[sub_resource type="Animation" id=4]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 3, 2, 1 ]
}

[sub_resource type="CapsuleShape2D" id=5]
radius = 16.7655
height = 15.0477

[sub_resource type="CapsuleShape2D" id=6]
radius = 17.3956
height = 15.9244

[sub_resource type="CapsuleShape2D" id=7]
radius = 110.428
height = 313.936

[node name="Minotaur" type="KinematicBody2D" groups=[
"Enemy",
]]
script = ExtResource( 1 )

[node name="Stats" parent="." instance=ExtResource( 7 )]
max_health = 2

[node name="Sprite" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 6 )
offset = Vector2( 0, -27 )
hframes = 4

[node name="Sprite2" type="Sprite" parent="."]
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 2 )
offset = Vector2( 0, -27 )
hframes = 3

[node name="Sprite3" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )
offset = Vector2( 0, -27 )
hframes = 5
frame = 1

[node name="Sprite4" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 9 )
offset = Vector2( 0, -27 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -11.3711, -17.2945 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 0.5
anims/Attack = SubResource( 2 )
anims/Idle = SubResource( 3 )
anims/Walk = SubResource( 4 )

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
visible = false
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( -10.8233, -16.5336 )
shape = SubResource( 5 )

[node name="Hitbox" parent="." groups=[
"hitbox",
] instance=ExtResource( 5 )]
collision_layer = 0
collision_mask = 4
damage = 5

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 15.0763, -14.4945 )
shape = SubResource( 6 )
disabled = true

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 8 )]
visible = false
collision_layer = 1
collision_mask = 1

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
visible = false
position = Vector2( -2.76627, -30.9553 )
rotation = 1.5708
shape = SubResource( 7 )

[node name="Songs" type="Node" parent="."]

[node name="Hit" type="AudioStreamPlayer" parent="Songs"]
stream = ExtResource( 10 )

[node name="Die" type="AudioStreamPlayer" parent="Songs"]
stream = ExtResource( 11 )
volume_db = -12.117
[connection signal="attack" from="." to="Hitbox" method="_on_Giant_White_Kurnas_attack"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="attacked" from="Hurtbox" to="Stats" method="_on_Hurtbox_attacked"]

[editable path="Hurtbox"]

[editable path="Hitbox"]

[editable path="PlayerDetectionZone"]
